<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="80dp">

        <ImageView
            android:id="@+id/dice1"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/diceone"
            android:scaleType="centerInside"
            android:src="@drawable/dice_1" />

        <ImageView
            android:id="@+id/dice2"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/dicetwo"
            android:scaleType="centerInside"
            android:src="@drawable/dice_2" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonPlayer1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstLinear"
        android:background="@drawable/round_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/roll"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/resultButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:text="@string/result"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/secondLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dice3"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/dicethree"
            android:scaleType="centerInside"
            android:src="@drawable/dice_3" />

        <ImageView
            android:id="@+id/dice4"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/dicefour"
            android:scaleType="centerInside"
            android:src="@drawable/dice_4" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonPlayer2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondLinear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/black"
        android:text="@string/roll2" />


</RelativeLayout>